Fix popover overflow bug

--- a/packages/frontend/src/app/block/[hash]/Block.scss
+++ b/packages/frontend/src/app/block/[hash]/Block.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: $gap;
+    overflow: visible;
   }
 
   &__InfoBlocks {
